# AgentForWebUITest

./: CHANGELOG.md  MANIFEST.in  Makefile  README.md  _verify_reporter.py  check_judge_import.py  config.yaml  pyproject.toml  pytest.ini  requirements.txt  test_analyzer_func.py  test_analyzer_verify.py  verify_i2.py  verify_i3.py  verify_judge.py
.github/workflows/: ci.yml
agent_for_webui_test.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
docs/: ARCHITECTURE.md  CONFIGURATION.md  INSTALLATION.md  LOGGING.md  QUICKSTART.md  RELEASE_CHECKLIST.md  iteration5_plan.md
reports/: final_verify.json  test_cases_e2e.json  test_report_20260426_174145.md
src/: __init__.py  agent.py  analyzer.py  cli.py  executor.py  explorer.py  healer.py  judge.py  planner.py  reporter.py  strategy.py
src/agent_for_webui_test.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/browser/: __init__.py  driver.py  factory.py  interface.py  playwright_driver.py
src/knowledge/: __init__.py  graph.py
src/suite/: __init__.py  builder.py  ci.py  dependency.py  filter.py  junit.py  runner.py
src/utils/: __init__.py
tests/: conftest.py  test_analyzer_func.py  test_analyzer_verify.py  test_reporter_version.py  test_verify_i2.py  test_verify_i3.py  test_verify_judge.py
